# multires2DTest

./: computeDensityMap.m  computeDownsampledSigmaT.m  computeDownsampledSigmaT.py  computeFFT.m  computeScattering.m  computeScattering.py  deleteTmpFiles.m  densityMap.csv  func_2DTest.m  func_2DTest_reflection.asv  func_2DTest_reflection.m  getDownscaleList.m  getDownscaleList.py  loadSigmaT.m  loadSigmaT.py  modelreview.py  multires2DRendering.py  multires2DTest.asv  multires2DTest.m  multires2DTest.py  multires2DTest_functions.py  scaleSigmaT.py  scatter.exe_CPU  scatter.exe_bk  scatter.exe_cpu  scatter.exe_par  scatter.exe_test  scatter.py  scatter_linux  script_2DTest.asv  script_2DTest.m  script_2DTest.m~  script_2DTest.py  script_2DTest0407.py  script_2DTest0410_AboutScale.py  script_2DTest0411_AboutScale.py  script_2DTest0518.py  script_2DTest0602.py  script_2DTest_generateDPdata.asv  script_2DTest_generateDPdata.m  (+20 more)
DeepLearning/: scalefactorRegression.py  script_plot.py  script_scalefactorRegression.py  validation.csv
backup/: script_2DTest_1209.m  test1.m  test2.m  test3.m  test4.m
backup_matlab/: computeDownsampledSigmaT.m  deleteTmpFiles.m  getDownscaleList.m  multires2DTest.m  scatter.m  script_2DTest.m  script_generateSigmaT.m  script_test.m
backup_python/: computeDownsampledSigmaT.py  computeFFT.py  computeScattering.py  deleteTmpFiles.py  getDownscaleList.py  loadSigmaT.py  tileSigmaT.py
input/: sigmaT1.exr  sigmaT11.csv  sigmaT1111.csv  sigmaT12.csv  sigmaT2.exr  sigmaT2222.csv  sigmaT3.csv  (+37 more)
scattering/: CMakeLists.txt  medium.h  scattering.cpp
(+550 files in other folders)
